# balatro-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_JUSTIFICATION.md  INFRASTRUCTURE_LESSONS.md  JOKER_API_REFERENCE.md  JOKER_INTERACTION_GUIDE.md  JOKER_METADATA_API_DESIGN.md  JOKER_PERFORMANCE_GUIDE.md  JOKER_TRAIT_IMPLEMENTATION.md  JOKER_TROUBLESHOOTING.md  PACK_SYSTEM_DESIGN.md  README.md  coverage.lcov  debug_flush.rs  deny.toml  rust-toolchain.toml  temp_test.rs  test_f64_migration.rs
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml  pr.yml  test-reporting.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: benchmark.rs  efficient_state_access_benchmark.rs  state_benchmark.rs
core/examples/: joker_comprehensive_guide.rs  new_joker_api.rs
core/src/: BUYJOKER_REVIEW_LESSONS.md  EFFICIENT_STATE_ACCESS_LESSONS.md  JOKER_LIFECYCLE_LESSONS.md  STATIC_JOKER_REVIEW_LESSONS.md  action.rs  ante.rs  available.rs  basic_chips_jokers.rs  card.rs  concurrent_state.rs  config.rs  debug_test.rs  deck.rs  effect.rs  error.rs  game.rs  generator.rs  hand.rs  joker.rs  joker_effect_processor.rs  joker_factory.rs  joker_impl.rs  joker_impl.rs.backup  joker_metadata.rs  joker_registry.rs  joker_state.rs  lib.rs  rank.rs  shop.rs  space.rs  stage.rs  state_version.rs  static_joker.rs  static_joker_factory.rs
core/src/boss_blinds/: README.md  mod.rs
core/src/consumables/: README.md  mod.rs
core/src/core/: action.rs  ante.rs  effect.rs
core/src/joker/: compat.rs  conditional.rs  hand_composition_jokers.rs  hand_composition_tests.rs  mod.rs
core/src/shop/: generation.rs  legacy.rs  mod.rs  packs.rs
core/src/vouchers/: README.md  mod.rs
core/tests/: action_test.rs  boss_blind_trait_test.rs  concurrent_state_access_test.rs  consumable_trait_test.rs  dependency_docs_test.rs  effects_migration_test.rs  error_test.rs  extended_game_state_test.rs  f64_migration_acceptance_tests.rs  f64_multiplier_test.rs  hand_type_conditional_jokers_test.rs  joker_effect_system_test.rs  joker_f64_migration_test.rs  joker_scoring_integration_test.rs  joker_state_integration_tests.rs  module_structure_test.rs  money_conditional_jokers_test.rs  pack_system_tests.rs  pyo3_test.rs  save_game_compatibility_tests.rs  stage_test.rs  static_joker_integration_tests.rs.backup  test.rs  test_additional_static_jokers.rs  test_basic_chips_jokers.rs  voucher_trait_definition_test.rs
pylatro/: .gitignore  Cargo.toml  JOKER_API_MIGRATION_GUIDE.md  MIGRATION_GUIDE.md  README.md  build.sh  pyproject.toml  setup.sh  test_backwards_compatibility.py  test_new_features.py  test_performance.py
pylatro/.env/: pyvenv.cfg
pylatro/examples/: simulation.py
pylatro/gym/: env.py  train.py
pylatro/src/: lib.rs
pylatro/test/: main.py  test_backwards_compatibility.py  test_concurrent_access.py  test_joker_metadata.py  test_pylatro.py
scripts/: test-ci-local.sh
src/: lib.rs
src/core/: action.rs  ante.rs  card.rs  deck.rs  effect.rs  error.rs  game.rs  hand.rs  joker.rs  mod.rs  moves.rs  rank.rs  shop.rs  stage.rs
tests/: test.rs
