[package]
name = "balatro-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "~0.8.5"
thiserror = "~1.0.61"
serde = { version = "~1.0.215", optional = true, features = ["derive"] }
serde_json = { version = "~1.0.118", optional = true }
tracing = { version = "~0.1.40", optional = true}
uuid  = {version = "~1.9.1", optional = true, features = ["v7"]}
itertools = "0.13.0"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "uuid?/serde"]
