[package]
name = "balatro-rs"
version = "0.0.1"
edition = "2021"
description = "Game engine and move generator for simplified version of balatro"
license = "MIT"
repository ="https://github.com/evanofslack/balatro-rs"
keywords = ["balatro", "game-engine", "move-generator"]

[dependencies]
anyhow = "~1.0"
colored = {version = "2.2.0", optional = true}
indexmap = "2.6.0"
itertools = "0.13.0"
pyo3 = {version = "0.24.1", optional = true, features = ["auto-initialize"]}
rand = "~0.8.5"
serde = { version = "~1.0.215", optional = true, features = ["derive"] }
serde_json = { version = "~1.0.118", optional = true }
strum = { version = "0.26", features = ["derive"] }
thiserror = "~1.0.61"
tracing = { version = "~0.1.40", optional = true}
uuid  = {version = "~1.9.1", optional = true, features = ["v7"]}

[dev-dependencies]
criterion = "0.3"

[features]
default = ["serde", "python"]
python = ["dep:pyo3"]
serde = ["dep:serde", "dep:serde_json", "uuid?/serde"]
colored = ["dep:colored"]

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "state_benchmark"
harness = false

[[bench]]
name = "efficient_state_access_benchmark"
harness = false
