[package]
name = "pylatro"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pylatro"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.24.1", features = ["auto-initialize"]}
balatro-rs = {path = "../core/", version = "0.0.1"}
